# course_selection_api

./: .gitignore  API_EXPORT_CSV_CHANGES.md  API_STATUS_REPORT.md  API_TOKEN_REQUIREMENTS.md  CHECK_LOGS_GUIDE.md  README.md  TOKEN_AUTH_GUIDE.md  VERIFY_API_FIX.md  check_api_logs.sh  config.local.env  import_course_data_from_csv.py  import_course_data_from_excel.py  import_sdgs_sub_themes.py  import_themes_from_csv.py  oracle_create_tables_users_tablespace.sql  pyproject.toml  structure.tx
course_selection_api/: config.py  main.py
course_selection_api/business_model/: auth_business.py  school_year_business.py  school_year_settings_business.py  theme_business.py
course_selection_api/data_access_object/: __init__.py  db.py  db.py.backup.py  db_fixed.py  school_year_settings_dao.py  theme_dao.py  users_dao.py
course_selection_api/endpoints/: __init__.py  auth.py  school_year.py  school_year_settings.py  theme.py  token_auth.py
course_selection_api/lib/: base_exception.py  dao_factory.py  logger.py  response.py  setting.py
course_selection_api/lib/auth_library/: __init__.py  exception.py  jwt.py  permission.py  simple_token.py  username_mapping.py
course_selection_api/schema/: __init__.py  auth.py  school_year_settings.py  theme.py
course_selection_api/utils/: email_generator.py  privacy_protection.py
deploy/: README.md  deploy.sh  env.template  fastapi.service  nginx.conf  nginx.conf.http  setup_https.sh  setup_server.sh  setup_service.sh
